Farben hinzugefügt mittels root im css, Ordnerstruktur verbessert, CSS verfeinert und Bilder hinzugefügt

--- a/project/autos.html
+++ b/project/autos.html
@@ -18,7 +18,7 @@
                 <h2>Finde dein Traumauto</h2>
                 <p>Durchsuche unsere große Auswahl an Gebrauchtwagen.</p>
             </div>
-            <div class="hero-image">Bild 1</div>
+            <img class="hero-image" src="./Bilder/Startseite_Image_1.jpeg" alt="">
         </section>
 
         <section class="cars">
