Index verbessert und CSS hell gemacht

--- a/project/autos.html
+++ b/project/autos.html
@@ -25,7 +25,7 @@
             <h2>Beliebte Fahrzeuge</h2>
             <div class="car-grid">
                 <div class="car-card">
-                    <div class="car-image">Bild: Sportwagen</div>
+                    <img class="car-image" src="./Bilder/Startseite_Image_1.jpeg" alt="">
                     <h3>BMW M4</h3>
                     <p>450 PS • 2020 • 30.000 km</p>
                 </div>
@@ -38,6 +38,16 @@
                     <div class="car-image">Bild: Limousine</div>
                     <h3>Mercedes C-Klasse</h3>
                     <p>Benzin • 2021 • 20.000 km</p>
+                </div>
+                <div class="car-card">
+                    <div class="car-image">Bild: Limousine</div>
+                    <h3>Mercedes G-Klasse</h3>
+                    <p>Benzin • 2021 • 50.000 km</p>
+                </div>
+                <div class="car-card">
+                    <div class="car-image">Bild: Limousine</div>
+                    <h3>BMW M340i</h3>
+                    <p>Benzin • 2023 • 15.000 km</p>
                 </div>
             </div>
         </section>
