Navigation verbessert. (Placeholder links)
Farben hinzugefügt.

Responsive Design angepasst.

--- a/project/autos.html
+++ b/project/autos.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoScout24 Design</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module" src="script.js"></script>
 </head>
 <body>
 
+
     <header>
-        <div class="logo">FairWheels</div>
+        <div class="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
+        <nav class="nav-rechts">
+            <a href="seite1.html">Über uns</a>
+            <a href="seite2.html">Favoriten</a>
+            <a id="login" href="seite3.html">LOGIN</a>
+        </nav>
     </header>
 
     <div class="hero">
         <div class="overlay">
             <h1>Suchen Sie nach Autos</h1>
-            <p>Schnell & kostenfrei suchen.</p>
+            <p>Schnell & kostenfrei Automobile suchen.</p>
         </div>
     </div>
 
