--- a/project/autos.html
+++ b/project/autos.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AutoScout24 Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module" src="script.js"></script>
 </head>
 <body>
 
-
     <header>
-        <div class="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
+        <div onclick="resetSite()" class="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
         <nav class="nav-rechts">
             <a href="seite1.html">Über uns</a>
             <a href="seite2.html">Favoriten</a>
             <a id="login" href="seite3.html">LOGIN</a>
+            <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
+
+    <div id="headerPlaceHolder"></div>
 
     <div class="hero">
         <div class="overlay">
@@ -27,8 +29,7 @@
         </div>
     </div>
 
-    <section id="search-box">
-    </section>
+    <section id="search-box"></section>
 
     <div id="auto-container"></div>
 
