White-Dark Mode implementiert. CSS verfeinert und JSON etwas erweitert.

--- a/project/autos.html
+++ b/project/autos.html
@@ -11,7 +11,8 @@
 <body>
 
     <header>
-        <div onclick="resetSite()" class="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
+        <div id="dropDown">☰</div>
+        <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
         <nav class="nav-rechts">
             <a href="seite1.html">Über uns</a>
             <a href="seite2.html">Favoriten</a>
