--- a/project/autos.html
+++ b/project/autos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutoScout24 Design</title>
+    <title>FairWheels | Gebrauchtwagen Suche</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module" src="script.js"></script>
@@ -20,22 +20,23 @@
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
-
+<data value="neeeee"></data>
     <div id="headerPlaceHolder"></div>
 
     <div class="hero">
         <div class="overlay">
             <h1>Suchen Sie nach Autos</h1>
-            <p>Schnell & kostenfrei Automobile suchen.</p>
+            <p>Schnell & kostenfrei Automobile suchen.</p>llles
         </div>
     </div>
 
     <section id="search-box"></section>
+    
 
     <div id="auto-container"></div>
 
-    <section class="bottom-section">
-        <div class="last-search">
+    <section class="bottom-section">^
+        <div class="last-search">+
             <p>Deine letzte Suche</p>
             <strong>SEAT Leon</strong>
             <p>EZ von 2014 · bis 15 000 €</p>
