Infoseite und Detailansicht angefangen.

--- a/project/autos.html
+++ b/project/autos.html
@@ -14,7 +14,7 @@
         <div id="dropDown">☰</div>
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
         <nav class="nav-rechts">
-            <a href="seite1.html">Über uns</a>
+            <a href="./info.html">Über uns</a>
             <a href="seite2.html">Favoriten</a>
             <a id="login" href="seite3.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
