Login und Favoriten Funktion angefangen. Favoriten Seite muss noch gemacht werden, Detailansicht auch verebessert.

--- a/project/autos.html
+++ b/project/autos.html
@@ -6,7 +6,7 @@
     <title>FairWheels | Gebrauchtwagen Suche</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
         <nav class="nav-rechts">
             <a href="./info.html">Über uns</a>
             <a href="seite2.html">Favoriten</a>
-            <a id="login" href="seite3.html">LOGIN</a>
+            <a id="login" href="../login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
