favoriten, login und javascript für beide implementiert. Noch nicht fertig.

--- a/project/favoriten.html
+++ b/project/favoriten.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FairWheels | Gebrauchtwagen Suche</title>
+    <title>FairWheels | Favoriten</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="favoriten.js" defer></script>
 </head>
 <body>
 
@@ -15,23 +15,20 @@
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
         <nav class="nav-rechts">
             <a href="./info.html">Über uns</a>
-            <a href="./favoriten.html">Favoriten</a>
+            <a href="./autos.html">Autos</a>
             <a id="login" href="../login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
-<data value="neeeee"></data>
+
     <div id="headerPlaceHolder"></div>
 
     <div class="hero">
         <div class="overlay">
-            <h1>Suchen Sie nach Autos</h1>
-            <p>Schnell & kostenfrei Automobile suchen.</p>llles
+            <h1>Ihre Favoriten</h1>
+            <p>Alle gespeicherten Autos auf einen Blick.</p>
         </div>
     </div>
-
-    <section id="search-box"></section>
-    
 
     <div id="auto-container"></div>
 
