--- a/project/info.html
+++ b/project/info.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FairWheels | Über uns</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -28,28 +29,26 @@
         </div>
     </div>
 
-    <section class="about-section">
-        <div class="wrapper">
-            <h2>Unsere Mission</h2>
-            <p>
-                FairWheels wurde gegründet, um den Gebrauchtwagenmarkt transparenter und zugänglicher zu machen. 
-                Unser Ziel ist es, Ihnen die Suche nach Ihrem Traumauto so einfach und angenehm wie möglich zu gestalten.
-            </p>
-            <h2>Warum FairWheels?</h2>
-            <p>
-                Wir bieten Ihnen eine benutzerfreundliche Plattform, auf der Sie schnell und kostenlos nach Gebrauchtwagen suchen können. 
-                Mit unserer Favoriten-Funktion können Sie Ihre Lieblingsautos speichern und jederzeit darauf zugreifen.
-            </p>
-            <h2>Unser Team</h2>
-            <p>
-                Unser engagiertes Team arbeitet kontinuierlich daran, Ihre Erfahrung auf unserer Plattform zu verbessern. 
-                Wir legen großen Wert auf Kundenzufriedenheit und stehen Ihnen bei Fragen oder Anregungen gerne zur Verfügung.
-            </p>
-        </div>
+    <section class="about-section wrapper">
+        <h2>Unsere Mission</h2>
+        <p>
+            FairWheels wurde gegründet, um den Gebrauchtwagenmarkt transparenter und zugänglicher zu machen. 
+            Unser Ziel ist es, Ihnen die Suche nach Ihrem Traumauto so einfach und angenehm wie möglich zu gestalten.
+        </p>
+        <h2>Warum FairWheels?</h2>
+        <p>
+            Wir bieten Ihnen eine benutzerfreundliche Plattform, auf der Sie schnell und kostenlos nach Gebrauchtwagen suchen können. 
+            Mit unserer Favoriten-Funktion können Sie Ihre Lieblingsautos speichern und jederzeit darauf zugreifen.
+        </p>
+        <h2>Unser Team</h2>
+        <p>
+            Unser engagiertes Team arbeitet kontinuierlich daran, Ihre Erfahrung auf unserer Plattform zu verbessern. 
+            Wir legen großen Wert auf Kundenzufriedenheit und stehen Ihnen bei Fragen oder Anregungen gerne zur Verfügung.
+        </p>
     </section>
 
-    <footer>
-        <p>&copy; 2025 FairWheels. Alle Rechte vorbehalten.</p>
+    <footer class="footer">
+        <p>Medientechnik Sommerprojekt 2025 </p>
     </footer>
 
 </body>
