Ordnerstruktur verbessert. Detailansicht Format responsive designed. Favoriten Implementierung abgeschlossen.

--- a/project/Unterseiten/favoriten.html
+++ b/project/Unterseiten/favoriten.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FairWheels | Favoriten</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="favoriten.js" defer></script>
+    <script src="../Javascripts/favoriten.js" defer></script>
 </head>
 <body>
 
     <header>
         <div id="dropDown">☰</div>
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
-        <nav class="nav-rechts">
-            <a href="./info.html">Über uns</a>
-            <a href="./autos.html">Autos</a>
-            <a id="login" href="../login.html">LOGIN</a>
+            <nav class="nav-rechts">
+            <a href="../Unterseiten/info.html">Über uns</a>
+            <a href="../autos.html">Autos</a>
+            <a id="login" href="../Unterseiten/login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
