--- a/project/Unterseiten/info.html
+++ b/project/Unterseiten/info.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FairWheels | Über uns</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../Javascripts/script.js" defer></script>
 </head>
 <body>
 
     <header>
         <div id="dropDown">☰</div>
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
-        <nav class="nav-rechts">
-            <a href="autos.html">Startseite</a>
-            <a href="seite2.html">Favoriten</a>
-            <a id="login" href="seite3.html">LOGIN</a>
+            <nav class="nav-rechts">
+            <a href="../autos.html">Startseite</a>
+            <a href="../Unterseiten/favoriten.html">Favoriten</a>
+            <a id="login" href="../Unterseiten/login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
