--- a/project/Unterseiten/login.html
+++ b/project/Unterseiten/login.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | FairWheels</title>
-  <link rel="stylesheet" href="./project/style.css">
-  <script src="./project/login.js" defer></script></head>
+  <link rel="stylesheet" href="../style.css">
+  <script src="../Javascripts/login.js" defer></script>
+</head>
 <body>
   <div class="login-container">
     <div class="login-box">
