--- a/project/autos.html
+++ b/project/autos.html
@@ -6,7 +6,7 @@
     <title>FairWheels | Gebrauchtwagen Suche</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="./Javascripts/script.js" defer></script>
 </head>
 <body>
 
@@ -14,9 +14,9 @@
         <div id="dropDown">☰</div>
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
         <nav class="nav-rechts">
-            <a href="./info.html">Über uns</a>
-            <a href="./favoriten.html">Favoriten</a>
-            <a id="login" href="../login.html">LOGIN</a>
+            <a href="./Unterseiten/info.html">Über uns</a>
+            <a href="./Unterseiten/favoriten.html">Favoriten</a>
+            <a id="login" href="./Unterseiten/login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
@@ -26,7 +26,7 @@
     <div class="hero">
         <div class="overlay">
             <h1>Suchen Sie nach Autos</h1>
-            <p>Schnell & kostenfrei Automobile suchen.</p>llles
+            <p>Schnell & kostenfrei Automobile suchen.</p>
         </div>
     </div>
 
