Neue Animationen, neue Filterfunktionen und CSS Verbesserungen

--- a/project/Unterseiten/favoriten.html
+++ b/project/Unterseiten/favoriten.html
@@ -15,12 +15,12 @@
         <div id="logo"><p id="Fair">Fair</p><p id="Wheels">Wheels</p></div>
             <nav class="nav-rechts">
             <a href="../Unterseiten/info.html">Über uns</a>
-            <a href="../autos.html">Autos</a>
+            <a href="../autos.html">Startseite</a>
             <a id="login" href="../Unterseiten/login.html">LOGIN</a>
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
-
+    
     <div id="headerPlaceHolder"></div>
 
     <div class="hero">
