Anzeige für empfohlenes Auto

--- a/project/autos.html
+++ b/project/autos.html
@@ -20,7 +20,7 @@
             <button onclick="toggleMode()" id="whiteModeToggle">DARK</button>
         </nav>
     </header>
-<data value="neeeee"></data>
+    
     <div id="headerPlaceHolder"></div>
 
     <div class="hero">
@@ -30,9 +30,10 @@
         </div>
     </div>
 
+    <div id="empfohlen-container"></div>
+
     <section id="search-box"></section>
     
-
     <div id="auto-container"></div>
 
     <footer class="footer">
